--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
       #seek {
         width: 100%;
       }
+      .love {
+        font-size: 0.7rem;
+        text-align: center;
+      }
     </style>
   </head>
   <body>
@@ -116,6 +120,13 @@
         target="_blank"
         >Full size image</a
       >
+      <hr />
+      <p class="love">
+        Made with ❤️ by Enlightened Dnipro (Ukraine) community (<a
+          href="https://github.com/Enl-DP-UA/audio-spectrogram"
+          >GitHub</a
+        >)
+      </p>
     </section>
   </body>
   <script>
